# extmorph

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build.sh  setup_malware.sh
malware/: .gitkeep  README.md
src/: lib.rs  main.rs
src/patcher/: mod.rs
src/profiles/: abyss.rs  babuk.rs  blackhunt2.rs  chaos52.rs  mod.rs  trigona.rs
src/utils/: mod.rs  pe_timestamp.rs
