[package]
name = "extmorph"
version = "0.1.0"
edition = "2024"
authors = ["petikvx"]
description = "Ransomware extension morphing tool for security research"

[lib]
name = "extmorph"
path = "src/lib.rs"

[[bin]]
name = "extmorph"
path = "src/main.rs"

[[bin]]
name = "pe_timestamp"
path = "src/bin/pe_timestamp.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
filetime = "0.2"
